# gsv_tts

./: Cargo.toml  README.md  config.json
resources/: cut_en.html  cut_zh.html  index.html  index.zh.html
src/: main.rs  tts.rs
