[package]
name = "gsv_tts"
version = "0.1.0"
edition = "2024"

[dependencies]
# log
log = "0.4"
env_logger = "0.11"

clap = { version = "4.5", features = ["derive", "env"] }


tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
axum = { version = "0.8", features = ["ws"] }

futures = "0.3"
anyhow = "1.0.86"

serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0.132"

wav_io = "0.1.14"
gpt_sovits_rs = { version = "0.7", path = "../gpt_sovits_rs" }
